Fixing margin overflow.

--- a/less/primo-results.less
+++ b/less/primo-results.less
@@ -275,6 +275,11 @@ td.EXLMyShelfStar{
   }
 }
 
+//adding negative margin so that the borders overlap.
+.coverImageDiv{
+  margin: -1px;
+}
+
 iframe{
   position: static;
 }
